# rose

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
.cursor/skills/python/: SKILL.md
.cursor/skills/python/design-patterns/: README.md
.cursor/skills/python/design-patterns/behavioral/: chain-of-responsibility.md  command.md  iterator.md  mediator.md  memento.md  observer.md  state.md  strategy.md  template-method.md  visitor.md
.cursor/skills/python/design-patterns/creational/: abstract-factory.md  builder.md  factory-method.md  prototype.md  singleton.md
.cursor/skills/python/design-patterns/structural/: adapter.md  bridge.md  composite.md  decorator.md  facade.md  flyweight.md  proxy.md
.cursor/skills/python/style/: architecture.md  circular-imports.md  docstrings.md  formatting.md  imports.md  naming.md  reusable-code.md  typing.md
agentmanager/: Dockerfile  __init__.py  pyproject.toml
agentmanager/app/: __init__.py  dependencies.py  main.py
agentmanager/app/api/: agents.py  chat.py
agentmanager/app/models/: __init__.py  agent.py
agentmanager/app/persistence/: __init__.py  agent_repository.py  database.py
agentmanager/app/services/: agent_service.py  chat_service.py  events_reporter.py
agentmanager/app/static/: styles.css
agentmanager/app/web/: routes.py
agentmanager/app/web/templates/: agent_form.html  agents_list.html  base.html
controlpanel/: Dockerfile  pyproject.toml
controlpanel/app/: __init__.py  config.py  dependencies.py  event_store.py  main.py
controlpanel/app/api/: __init__.py  events.py
controlpanel/app/models/: __init__.py  event.py
controlpanel/app/static/: styles.css  theme.css
controlpanel/app/web/: __init__.py  routes.py
controlpanel/app/web/templates/: base.html  events.html  index.html
discordgateway/: Dockerfile  __init__.py  pyproject.toml
discordgateway/app/: __init__.py  config.py  dependencies.py  main.py
discordgateway/app/api/: config.py  send_to_channel.py
discordgateway/app/discord/: __init__.py  bot.py
discordgateway/app/models/: __init__.py  config.py
discordgateway/app/persistence/: __init__.py  channel_assignment_repository.py  config_repository.py  database.py
discordgateway/app/services/: __init__.py  agentmanager_client.py  config_service.py  events_reporter.py  messagequeue_client.py
discordgateway/app/static/: styles.css
discordgateway/app/web/: routes.py
discordgateway/app/web/templates/: base.html  index.html
heartbeat/: Dockerfile  README.md  __init__.py  pyproject.toml
heartbeat/app/: __init__.py  clients.py  config.py  events_reporter.py  loop.py  main.py
messagequeue/: Dockerfile  __init__.py  pyproject.toml
messagequeue/app/: __init__.py  dependencies.py  main.py
messagequeue/app/api/: messages.py
messagequeue/app/models/: __init__.py  message.py
messagequeue/app/persistence/: database.py  session_repository.py
messagequeue/app/services/: queue_service.py
platform_theme/: theme.css
rose/: .gitignore  SKILL.md  __main__.py
rose/command_framework/: __init__.py  command.py  command_index.py  constants.py  types.py
rose/commands/create_command/: SKILL.md  __init__.py  command.py
rose/commands/create_command/template/: SKILL.md  __init__.py  command.py
rose/commands/environment_variables/: SKILL.md  __init__.py  command.py
rose/commands/install/: __init__.py  command.py
ticketmanager/: Dockerfile  pyproject.toml
ticketmanager/app/: __init__.py  dependencies.py  main.py
ticketmanager/app/api/: tickets.py
ticketmanager/app/models/: __init__.py  ticket.py
ticketmanager/app/persistence/: __init__.py  database.py  ticket_repository.py
ticketmanager/app/services/: __init__.py  ticket_service.py
ticketmanager/app/static/: styles.css
ticketmanager/app/web/: routes.py
ticketmanager/app/web/templates/: base.html  kanban.html
ticketmanager/app/web/templates/partials/: filter_bar.html  ticket_card.html  ticket_form.html
