[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rose-cli"
version = "0.1.0"
description = "A home for assistant commands — run rose from any directory."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
]

[project.scripts]
rose = "rose.__main__:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["rose*"]

[tool.setuptools.package-data]
rose = [
    "SKILL.md",
    "commands.index",
    "requirements.txt",
    "commands/*/SKILL.md",
    "commands/*/*/SKILL.md",
]
