[project]
name = "controlpanel"
version = "0.1.0"
description = "Rose platform control panel: single-page navigation to all services."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.8.0",
]
